--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link href="https://fonts.cdnfonts.com/css/geomanist" rel="stylesheet">
-                
+                <title>Noping</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap" rel="stylesheet">
@@ -233,7 +233,85 @@ flex-flow:1;
   	
   	</div>
   <button id="downloadButton">Download Image</button>
+  <script type="text/javascript">
+  // Function to set a cookie
+  function setCookie(name, value, days) {
+  var expires = "";
+  if (days) {
+    var date = new Date();
+    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+    expires = "; expires=" + date.toUTCString();
+  }
+  document.cookie = name + "=" + (value || "") + expires + "; path=/";
+  }
   
+  // Function to get a cookie value
+  function getCookie(name) {
+  var nameEQ = name + "=";
+  var ca = document.cookie.split(';');
+  for (var i = 0; i < ca.length; i++) {
+    var c = ca[i];
+    while (c.charAt(0) == ' ') {
+      c = c.substring(1, c.length);
+    }
+    if (c.indexOf(nameEQ) == 0) {
+      return c.substring(nameEQ.length, c.length);
+    }
+  }
+  return null;
+  }
+  
+  // Function to save data to cookies
+  function saveDataToCookies() {
+  var nameElement = document.querySelector(".name");
+  var usernameElement = document.querySelector(".username");
+  var imageInputElement = document.querySelector(".input");
+  
+  // Get the values from the respective elements
+  var name = nameElement.innerText;
+  var username = usernameElement.innerText;
+  var imageInput = imageInputElement.value;
+  
+  // Save the values to cookies
+  setCookie("name", name, 365); // Set the cookie with a validity of 365 days
+  setCookie("username", username, 365);
+  setCookie("imageInput", imageInput, 365);
+  }
+  
+  // Event listener for name field
+  var nameElement = document.querySelector(".name");
+  nameElement.addEventListener("input", function() {
+  saveDataToCookies();
+  });
+  
+  // Event listener for username field
+  var usernameElement = document.querySelector(".username");
+  usernameElement.addEventListener("input", function() {
+  saveDataToCookies();
+  });
+  
+  // Function to populate fields from cookies
+  function populateFieldsFromCookies() {
+  var name = getCookie("name");
+  var username = getCookie("username");
+  var imageInput = getCookie("imageInput");
+  
+  // Set the values of the respective elements from the cookies
+  if (name) {
+    nameElement.innerText = name;
+  }
+  if (username) {
+    usernameElement.innerText = username;
+  }
+  if (imageInput) {
+    imageInputElement.value = imageInput;
+  }
+  }
+  
+  // Call the function to populate fields from cookies when the page is loaded
+  populateFieldsFromCookies();
+  
+  </script>
   <script>
 
 
@@ -292,6 +370,7 @@ function handleImageChange(event) {
   reader.onload = function (event) {
     const profileImage = document.querySelector('.profile-image');
     profileImage.src = event.target.result;
+      saveDataToCookies();
   };
 
   reader.readAsDataURL(file);
@@ -329,7 +408,7 @@ switchElement2.addEventListener('change', function() {
   }
 });
   </script>
-  
+
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </body>
-</html>
+  </html>
