--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ flex-flow:1;
     usernameElement.innerText = username;
   }
   if (imageInput) {
-    imageInputElement.value = imageInput;
+    document.querySelector(".profile-image").src = imageInput;
   }
   }
   
