--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ flex-flow:1;
 
       <li style="--bg:#332966;" ></li>
     <li style="--bg:#fe6700;" ></li>
-        <li style="--bg:#1e4220;" ></li>
+        <li style="--bg:#000;" ></li>
         <li style="--bg:#c6c21f;" ></li>
         <li style="--bg:#651e1e;" ></li>
         <li style="--bg:#2196f3;" ></li>
