--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ slider2.addEventListener('input', function() {
 
 slider2.addEventListener('change', function() {
   var sliderValue = this.value;
-  container.style.borderRadius = sliderValue + '%';
+  container.style.borderRadius = sliderValue + 'px';
 });
 </script>
 
