--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ font-family:Poppins;
  outline:0;
  border:0;
       height: 100vw;
-     background: #212121;
+     background: #171A29;
       overflow: hidden;
       display:flex;
       align-items:center;
