--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="https://fonts.cdnfonts.com/css/geomanist" rel="stylesheet">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9175976224626821"
+     crossorigin="anonymous"></script>
+<meta name="description" content="Generate Instagram posts in bulk with INSTABULK. Create eye-catching content, customize with unique colors and fonts, and save time with easy batch uploads. Streamline your Instagram strategy today!">
+<meta name="keywords" content="Instagram posts, bulk post generator, social media tools, content creation, Instagram marketing, time-saving tools, customization, engagement">
+<title>INSTABULK - Generate Instagram Posts in Bulk, Effortlessly</title>
+  
+  <link href="https://fonts.cdnfonts.com/css/geomanist" rel="stylesheet">
                 <title>Noping</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
