--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@ main {
                 font-family: Poppins;
             }
             @media only screen and (min-width: 768px) {
+              body{
+               align-items: center;
+               justify-content: center;
+              }
                 main{
                   flex-direction: row;
                   height:60vh;
@@ -64,6 +68,10 @@ main {
                 #container{
                   height:60vh;
                   width:60vh;
+                }
+                #container2{
+                  height: 60vh;
+                  width: 60vh;
                 }
                 
             }
