--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@ main {
                 width: 100%;
                 outline: 0;
                 border: 0;
-                height: 100vw;
                 background: #171A29;
                 overflow: hidden;
                 display: flex;
                 align-items: center;
                 top: 0;
                 left: 0;
-               
+               aspect-ratio: 1;
             }
             #container2 {
                 margin: 0;
@@ -81,7 +80,7 @@ main {
                 border: 2px solid white;
                 }
                 #container{
-                  height:100%;
+                  
                   width:50%;
                 }
                 #container2{
@@ -117,11 +116,12 @@ main {
             }
 
             .profile-image {
-                height: 11vw;
-                width: 11vw;
+               aspect-ratio:1;
+                width: 11%;
                 border-radius: 6vw;
                 background: white;
                 margin-right: 15px;
+                display: flex;
             }
 
             #downloadButton {
