--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             .profile-image {
                 aspect-ratio: 1/1;
                 width: 15%;
+                height:15%;
                 border-radius: 6vw;
                 background: white;
                 margin-right: 15px;
