--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 height: 100%;
                 width: 100%;
             }
-
+            
             body {
                 margin: 0;
                 padding: 0;
@@ -177,6 +177,8 @@
             hr {
                 margin: 0;
                 padding: 0;
+                border:1px solid white;
+                outline:none;
             }
 
         
