--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 background: #212121;
                 height: 100%;
                 width: 100%;
+                margin:0;
+                padding:0;
             }
             
             body {
@@ -30,6 +32,7 @@
                 display: flex;
                 flex-direction: row;
                 font-family: Poppins;
+                overflow: hidden;
             }
 
             main {
@@ -86,6 +89,7 @@
                 body {
                     align-items: center;
                     justify-content: center;
+                    overflow: hidden;
                 }
 
                 main {
