--- a/index.html
+++ b/index.html
@@ -330,7 +330,20 @@
                         <input type="checkbox" checked="checked" id="mySwitch">
                         <span class="slider"></span>
                     </label>
+                    
                 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9175976224626821"
+     crossorigin="anonymous"></script>
+<!-- Tooling -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9175976224626821"
+     data-ad-slot="3183598316"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 <!--div class="extra-box"><span class="label-text">Show Hamburger</span><label class="switch switch2"><input type="checkbox" id="mySwitch2"><span class="slider"></span></label></div-->
                 <span class="label-text-x">Height</span>
                 <input class="prog" type="range" id="slider" min="50" max="384" value="384">
