--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <meta name="google-site-verification" content="nRZDz_zJO0R5sbiHYAf-W2LZ-DvWAJkhrCe1TcQl5xk">
+
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9175976224626821" crossorigin="anonymous"></script>
         <meta name="description" content="Generate Instagram posts in bulk with INSTABULK. Create eye-catching content, customize with unique colors and fonts, and save time with easy batch uploads. Streamline your Instagram strategy today!">
         <meta name="keywords" content="Instagram posts, bulk post generator, social media tools, content creation, Instagram marketing, time-saving tools, customization, engagement">
