--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 outline: 0;
                 min-height: 100vw;
                 border: 0;
-                background: #171A29;
+                background: #000;
                 overflow: hidden;
                 display: flex;
                 align-items: center;
