--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <ul class="background">
                     <li style="--bg:rgba(0,0,0,0.7);">dim</li>
                     <li style="--bg:#243748;"></li>
-                    <li style="--bg:#262f4d;"></li>
+                    
                     <li style="--bg:#332966;"></li>
                     <li style="--bg:#fe6700;"></li>
                     <li style="--bg:#000000;"></li>
@@ -49,6 +49,7 @@
                     <li style="--bg:#2196f3;"></li>
                     <li style="--bg:#2196f3;"></li>
                 </ul>
+                <input class="color-picker" data-coloris>
                 <textarea class="input" placeholder="Or enter text manually here, usually for generating multiple posts, seprated by [|] sign."></textarea>
                 <span class="label-text-x">Font size</span>
                 <input class="prog" type="range" id="slider3" min="10" max="20" value="16">
@@ -85,5 +86,8 @@
 
         </script>
         <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css" />
+<script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>    
     </body>
 </html>
