--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <li style="--bg:#2196f3;"></li>
                     <li style="--bg:#2196f3;"></li>
                 </ul>
-                <input class="color-picker" data-coloris>
+                <input class="color-picker" data-coloris></input>
                 <textarea class="input" placeholder="Or enter text manually here, usually for generating multiple posts, seprated by [|] sign."></textarea>
                 <span class="label-text-x">Font size</span>
                 <input class="prog" type="range" id="slider3" min="10" max="20" value="16">
