added custom font & fixed bugs

--- a/index.html
+++ b/index.html
@@ -1,93 +1,97 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <meta name="google-site-verification" content="nRZDz_zJO0R5sbiHYAf-W2LZ-DvWAJkhrCe1TcQl5xk">
 
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9175976224626821" crossorigin="anonymous"></script>
-        <meta name="description" content="Generate Instagram posts in bulk with INSTABULK. Create eye-catching content, customize with unique colors and fonts, and save time with easy batch uploads. Streamline your Instagram strategy today!">
-        <meta name="keywords" content="Instagram posts, bulk post generator, social media tools, content creation, Instagram marketing, time-saving tools, customization, engagement">
-        <title>INSTABULK - Generate Instagram Posts in Bulk, Effortlessly</title>
-        <link href="https://fonts.cdnfonts.com/css/geomanist" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale="1.0" user-scalable="no" />
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <main>
-            <!--Tab to edit-->
-            <div id="container" style="--bg:#000;">
-                <div id="tweet">
-                    <div class="top">
-                        <img class="profile-image" onclick="changeProfileImage()" src="https://raw.githubusercontent.com/noping07/noping07.github.io/main/app.jpg">
-                        <div class="profile-info">
-                            <div class="name" style="font-weight:bold;" contenteditable="">No Ping</div>
-                            <div class="username" style="color:#2196F3;  margin-top:2px;" contenteditable="">@noping07</div>
-                        </div>
-                    </div>
-                    <div class="main-tweet" contenteditable="">Tap to Edit Text <br>
+<head>
+    <meta name="google-site-verification" content="nRZDz_zJO0R5sbiHYAf-W2LZ-DvWAJkhrCe1TcQl5xk">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9175976224626821" crossorigin="anonymous"></script>
+    <meta name="description" content="Generate Instagram posts in bulk with INSTABULK. Create eye-catching content, customize with unique colors and fonts, and save time with easy batch uploads. Streamline your Instagram strategy today!">
+    <meta name="keywords" content="Instagram posts, bulk post generator, social media tools, content creation, Instagram marketing, time-saving tools, customization, engagement">
+    <title>INSTABULK - Generate Instagram Posts in Bulk, Effortlessly</title>
+    <link href="https://fonts.cdnfonts.com/css/geomanist" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Manrope:wght@200..800&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale="1.0" user-scalable="no" />
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <main>
+        <!--Tab to edit-->
+        <div id="container" style="--bg:#000;">
+            <div id="tweet">
+                <div class="top">
+                    <img class="profile-image" onclick="changeProfileImage()" src="https://raw.githubusercontent.com/noping07/noping07.github.io/main/app.jpg">
+                    <div class="profile-info">
+                        <div class="name" style="font-weight:bold;" contenteditable="">No Ping</div>
+                        <div class="username" style="color:#2196F3;  margin-top:2px;" contenteditable="">@noping07</div>
                     </div>
                 </div>
-                <p class="link" contenteditable="">
-                    <svg fill="#2196f3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="mdi-telegram" width="28" height="16" viewBox="0 0 24 24">
+                <div class="main-tweet" contenteditable="">Tap to Edit Text <br>
+                </div>
+            </div>
+            <p class="link" contenteditable="">
+                <svg fill="#2196f3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="mdi-telegram" width="28" height="16" viewBox="0 0 24 24">
                         <path d="M9.78,18.65L10.06,14.42L17.74,7.5C18.08,7.19 17.67,7.04 17.22,7.31L7.74,13.3L3.64,12C2.76,11.75 2.75,11.14 3.84,10.7L19.81,4.54C20.54,4.21 21.24,4.72 20.96,5.84L18.24,18.65C18.05,19.56 17.5,19.78 16.74,19.36L12.6,16.3L10.61,18.23C10.38,18.46 10.19,18.65 9.78,18.65Z" />
                     </svg>t.me/noping07
-                </p>
-            </div>
-            <hr>
-            <div id="container2">
-                <ul class="background">
-                    <li style="--bg:rgba(0,0,0,0.7);">dim</li>
-                    <li style="--bg:#243748;"></li>
-                    
-                    <li style="--bg:#332966;"></li>
-                    <li style="--bg:#fe6700;"></li>
-                    <li style="--bg:#000000;"></li>
-                    <li style="--bg:#c6c21f;"></li>
-                    <li style="--bg:#651e1e;"></li>
-                    <li style="--bg:#2196f3;"></li>
-                    <li style="--bg:#2196f3;"></li>
-                </ul>
-                <input class="color-picker" data-coloris></input>
-                <textarea class="input" placeholder="Or enter text manually here, usually for generating multiple posts, seprated by [|] sign."></textarea>
-                <span class="label-text-x">Font size</span>
-                <input class="prog" type="range" id="slider3" min="10" max="20" value="16">
-                <div class="extra-box">
-                    <span class="label-text">Extra Link</span>
-                    <label class="switch">
+            </p>
+        </div>
+        <hr>
+        <div id="container2">
+            <ul class="background">
+                <li style="--bg:rgba(0,0,0,0.7);">dim</li>
+                <li style="--bg:#243748;"></li>
+
+                <li style="--bg:#332966;"></li>
+                <li style="--bg:#fe6700;"></li>
+                <li style="--bg:#000000;"></li>
+                <li style="--bg:#c6c21f;"></li>
+                <li style="--bg:#651e1e;"></li>
+                <li style="--bg:#2196f3;"></li>
+                <li style="--bg:#2196f3;"></li>
+            </ul>
+            <input class="color-picker" value="#000000" data-coloris></input>
+            <textarea class="input" placeholder="Or enter text manually here, usually for generating multiple posts, seprated by [|] sign."></textarea>
+            <span class="label-text-x">Font size</span>
+            <input class="prog" type="range" id="slider3" min="10" max="20" value="16">
+            <div class="extra-box">
+                <span class="label-text">Extra Link</span>
+                <label class="switch">
                         <input type="checkbox" checked="checked" id="mySwitch">
                         <span class="slider"></span>
                     </label>
-                    <!--Tab to edit-->
-                </div>
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9175976224626821" crossorigin="anonymous"></script>
-                <!-- Tooling -->
-                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9175976224626821" data-ad-slot="3183598316" data-ad-format="auto" data-full-width-responsive="true"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-                <!--div class="extra-box"><span class="label-text">Show Hamburger</span><label class="switch switch2"><input type="checkbox" id="mySwitch2"><span class="slider"></span></label></div-->
-                <span class="label-text-x">Height</span>
-                <input class="prog" type="range" id="slider" min="50" max="384" value="384">
-                <span class="label-text-x">Corner Radius</span>
-                <input class="prog" type="range" id="slider2" min="0" max="150" value="0">
-                <button id="downloadButton">Download Image</button>
-                <footer>
-                    <p> Made with ❤️ by <a href="https://extremekrish.github.io"> @Extreme_Krish </a>
-                    </p>
-                    <a href="privacy_policy.html">Privacy Policy</a>
-                    <a href="mailto:krishvishwakarma83@gmail.com">Contact</a>
-                </footer>
+                <!--Tab to edit-->
             </div>
-            <!--Tab to edit-->
-        </main>
-        <script src="script.js">
+            <span class="label-text-x">Font:</span>
 
-        </script>
-        <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css" />
-<script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>    
-    </body>
+            <select id="font">
+    <option value="Poppins">Poppins</option>
+    <option value="'CustomFont'">Hoelfer</option>
+    <option value="EB Garamond">EB Garamond</option>
+    <option value="Manrope">Manrope</option>
+            </select>
+            <!--div class="extra-box"><span class="label-text">Show Hamburger</span><label class="switch switch2"><input type="checkbox" id="mySwitch2"><span class="slider"></span></label></div-->
+            <span class="label-text-x">Height:</span>
+            <input class="prog" type="range" id="slider" min="50" max="384" value="384">
+            <span class="label-text-x">Corner Radius:</span>
+            <input class="prog" type="range" id="slider2" min="0" max="150" value="0">
+            <button id="downloadButton">Download Image</button>
+            <footer>
+                <p> Made with ❤️ by <a href="https://extremekrish.github.io"> @Extreme_Krish </a>
+                </p>
+                <a href="privacy_policy.html">Privacy Policy</a>
+                <a href="mailto:krishvishwakarma83@gmail.com">Contact</a>
+            </footer>
+        </div>
+        <!--Tab to edit-->
+    </main>
+    <script src="script.js">
+    </script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css" />
+    <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
+</body>
+
 </html>
