--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
             <span class="label-text-x">Font:</span>
 
             <select id="font">
+                <option value="'CustomFont'" selected>Hoelfer</option>
+
     <option value="Poppins">Poppins</option>
-    <option value="'CustomFont'">Hoelfer</option>
     <option value="EB Garamond">EB Garamond</option>
     <option value="Manrope">Manrope</option>
             </select>
