--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
     <option value="Poppins">Poppins</option>
     <option value="EB Garamond">EB Garamond</option>
     <option value="Manrope">Manrope</option>
+        <option value="var(--font)">Neurial Grotesk</option>
+
             </select>
             <!--div class="extra-box"><span class="label-text">Show Hamburger</span><label class="switch switch2"><input type="checkbox" id="mySwitch2"><span class="slider"></span></label></div-->
             <span class="label-text-x">Height:</span>
